# realmx

./: .bazelrc  .gitignore  AGENTS.md  CHANGELOG.md  MODULE.bazel  README.md  cliff.toml  defs.bzl  flake.nix  justfile  pnpm-lock.yaml  pnpm-workspace.yaml
codex-rs/: BUILD.bazel  Cargo.toml  README.md  deny.toml
codex-rs/app-server/: Cargo.toml  README.md
codex-rs/app-server-client/src/: lib.rs
codex-rs/app-server-protocol/src/: schema_fixtures.rs
codex-rs/app-server/src/: bespoke_event_handling.rs  codex_message_processor.rs  config_api.rs  config_manager_service_tests.rs  lib.rs  message_processor.rs  models.rs  outgoing_message.rs  thread_status.rs
codex-rs/arg0/src/: lib.rs
codex-rs/cli/: BUILD.bazel  Cargo.toml
codex-rs/cli/src/: agent_tree_worker.rs  branding.rs  lib.rs  login.rs  main.rs  mcp_cmd.rs
codex-rs/cli/tests/: execpolicy.rs  mcp_add_remove.rs  mcp_list.rs
codex-rs/codex-api/src/: lib.rs
codex-rs/codex-api/tests/: models_integration.rs
codex-rs/core/: BUILD.bazel  Cargo.toml  README.md  config.schema.json
codex-rs/docs/: codex_mcp_interface.md  protocol_v1.md
codex-rs/exec-server/: BUILD.bazel
codex-rs/execpolicy-legacy/: README.md
codex-rs/linux-sandbox/: README.md  build.rs
codex-rs/login/: Cargo.toml
codex-rs/otel/: Cargo.toml
codex-rs/protocol/: README.md
codex-rs/responses-api-proxy/: Cargo.toml
codex-rs/state/: Cargo.toml
codex-rs/tui/: BUILD.bazel  Cargo.toml
codex-rs/tui2/: BUILD.bazel  Cargo.toml
codex-rs/windows-sandbox-rs/: BUILD.bazel  Cargo.toml  build.rs  sandbox_smoketests.py
(+539 files in other folders)
